# laoshigpt

./: .gitignore  HSK-3 Chinese Word List.xlsx  README.md  app.py  laoshi_prototype.py  requirements.txt
.github/workflows/: python-app.yml
backend/: CMakeLists.txt
backend/app/: main.py
backend/app/routes/: sessions.py
backend/app/schemas/: sessions.py
backend/laoshigpt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: main.cpp
backend/src/tui/: tui.cpp
backend/tests/: test_chat_turn.py
backend_cpp/: README.md
backend_cpp/src/api/: api_client.cpp  api_client.hpp
backend_cpp/src/audio/: audio_capture.cpp  audio_capture.hpp
backend_cpp/src/session/: session.cpp  session.hpp
backend_cpp/src/tui/: tui.hpp
delete/backend_ts/: README.md  pyproject.toml
delete/backend_ts/app/schemas/: chat.py
delete/backend_ts/tests/: test_sessions.py
delete/frontend_ts/: App.tsx  app.json
delete/frontend_ts/src/navigation/: index.tsx
delete/frontend_ts/src/screens/: Practice.tsx  Review.tsx  Summary.tsx
delete/frontend_ts/src/services/api/: client.ts
delete/frontend_ts/src/state/: session.ts
docs/: initialcall.md
docs/plans/: 2026-04-05-laoshigpt-mvp-bootstrap.md
docs/requirements/: backend-architecture-inspired-by-laoshigpt.txt  backend-technical-requirements-v0.1.txt  competitive-analysis.txt  frontend-technical-requirements-v0.1.txt  open-decisions.txt  product-requirements-v0.1.txt  product-requirements-v0.2.txt  react-native-llm-conversation-core-concepts.txt  voice-architecture-requirements.txt
frontend/: package-lock.json  package.json
frontend/src/screens/: ModeSelect.tsx  Onboarding.tsx
frontend/src/types/: tutor.ts
src/: audio_util.py  hands_free_audio.py  laoshi_prompt.py  laoshi_prototype.py  realtime_session.py
tests/: test_hands_free_audio.py  test_realtime_session_streaming.py
